<resources>
    <string name="app_name">WhatsAppClone</string>
    <string name="phonenumberactivityimage">phonenumberactivityimage</string>
    <string name="verify_your_phone_number">Verify Your Phone Number</string>
    <string name="whatsappclone_will_send_you_sms_to_verify_your_phone_number">WhatsAppClone Will send you SMS to verify your phone number .</string>
    <string name="phonenumberactivitybtn">continue</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_the_otp_to_verify_your_phone_number">Enter the OTP to verify your phone number .</string>
    <string name="otpactivityimage">otpactivityimage</string>
    <string name="profile_information">Profile Information</string>
    <string name="please_set_your_profile">Please set your profile</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="set_profile">set profile</string>
    <string name="chats">Chats</string>
    <string name="status">Status</string>
    <string name="calls">Calls</string>
    <string name="search">Search</string>
    <string name="Groups">Groups</string>
    <string name="invite">Invite</string>
    <string name="settings">Settings</string>
    <string name="sample_name">sample name</string>
    <string name="userimage">userImage</string>
    <string name="lastmsg">lastMsg</string>
    <string name="_10_10">10:10 AM</string>
    <string name="type_a_message">Type a message</string>
    <string name="attachment">attachment</string>
    <string name="camera">Camera</string>
    <string name="send">send</string>
    <string name="emotionreceive">emotionreceive</string>
    <string name="emotionsend">emotionsend</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="edit_profile_picture">Edit Profile Picture</string>
    <string name="edit_user_name">Edit User Name</string>
    <string name="logout">Logout</string>
    <string name="from">From</string>
    <string name="dhruv_mojila">Dhruv Mojila</string>
    <string name="save">Save</string>
    <string name="todo">TODO</string>
</resources>