<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#51DDDDDD"
    tools:context=".Activites.SetUpProfile">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ProfileImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/phonenumberactivityimage"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065"
        android:src="@drawable/avatar" />

    <TextView
        android:id="@+id/phonenumshowtextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/profile_information"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/ProfileImage"
        app:layout_constraintStart_toStartOf="@+id/ProfileImage"
        app:layout_constraintTop_toBottomOf="@+id/ProfileImage" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/please_set_your_profile"
        app:layout_constraintEnd_toEndOf="@+id/phonenumshowtextview"
        app:layout_constraintStart_toStartOf="@+id/phonenumshowtextview"
        app:layout_constraintTop_toBottomOf="@+id/phonenumshowtextview" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="12dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:autofillHints=""
                android:background="@drawable/phonenumbertextbox"
                android:ems="10"
                android:hint="@string/enter_your_name"
                android:inputType="text"
                android:padding="10dp" />

            <Button
                android:id="@+id/SetProfileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:text="@string/set_profile" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>