<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:elevation="30dp"
    android:background="?selectableItemBackground">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/uprofileimage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/userimage"
        android:src="@drawable/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/uprofilename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/sample_name"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@+id/uprofileimage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ulastmsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/lastmsg"
        android:textColor="#272727"
        app:layout_constraintStart_toStartOf="@+id/uprofilename"
        app:layout_constraintTop_toBottomOf="@+id/uprofilename" />

    <TextView
        android:id="@+id/ulastmsgtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/_10_10"
        android:textColor="#272727"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="18dp"
        android:background="#6A272727"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ulastmsg"/>

</androidx.constraintlayout.widget.ConstraintLayout>