<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    android:background="?selectableItemBackground"
    android:elevation="30dp"
    tools:context=".Activites.EditProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/uprofileimage"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/userimage"
        android:src="@drawable/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/uprofilename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/sample_name"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/uprofileimage"
        app:layout_constraintEnd_toStartOf="@+id/EditProfileButton"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/uprofileimage"
        app:layout_constraintTop_toTopOf="@+id/uprofileimage" />

    <Button
        android:id="@+id/EditProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="@+id/uprofilename"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/uprofilename" />

    <LinearLayout
        android:id="@+id/linearLayoutLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="18dp"
        android:background="#1E272727"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uprofileimage" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutLine">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/editProfileImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="18dp"
            android:layout_marginTop="26dp"
            android:contentDescription="@string/userimage"
            android:src="@drawable/ic_baseline_image_24_purple" />

        <TextView
            android:id="@+id/EditProfilePic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/edit_profile_picture"
            android:textColor="#000000"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/editProfileName"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="18dp"
                android:layout_marginTop="18dp"
                android:contentDescription="@string/userimage"
                android:src="@drawable/ic_baseline_edit_24" />

            <TextView
                android:id="@+id/EditUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/edit_user_name"
                android:textColor="#000000"
                android:textSize="16sp" />
         </LinearLayout>

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:autofillHints=""
            android:background="@drawable/phonenumbertextbox"
            android:ems="10"
            android:hint="@string/enter_your_name"
            android:inputType="text"
            android:padding="10dp"
            android:visibility="gone"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logOut"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="18dp"
            android:layout_marginTop="18dp"
            android:contentDescription="@string/userimage"
            android:src="@drawable/ic_baseline_phonelink_off_24" />

        <TextView
            android:id="@+id/logOutText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/logout"
            android:textColor="#000000"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:layout_marginTop="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="serif-monospace"
        android:text="@string/dhruv_mojila"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView1" />


</androidx.constraintlayout.widget.ConstraintLayout>