<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2DFA7475"
    tools:context=".Activites.GroupChat">

<!--    <androidx.appcompat.widget.Toolbar-->
<!--        android:id="@+id/toolbar"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="?attr/colorPrimary"-->
<!--        android:minHeight="?attr/actionBarSize"-->
<!--        android:theme="?attr/actionBarTheme"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.5"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

<!--        <LinearLayout-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal"-->
<!--            tools:layout_editor_absoluteX="16dp"-->
<!--            tools:layout_editor_absoluteY="7dp">-->

<!--            <ImageView-->
<!--                android:id="@+id/backBtn"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--                android:contentDescription="@string/todo"-->
<!--                app:srcCompat="@drawable/ic_baseline_arrow_back_24" />-->

<!--            <de.hdodenhof.circleimageview.CircleImageView-->
<!--                android:id="@+id/uprofileimage"-->
<!--                android:layout_width="40dp"-->
<!--                android:layout_height="40dp"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_marginStart="5dp"-->
<!--                android:contentDescription="@string/userimage"-->
<!--                android:src="@drawable/avatar" />-->

<!--            <LinearLayout-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center_vertical"-->
<!--                android:orientation="vertical"-->
<!--                tools:layout_editor_absoluteX="16dp">-->

<!--                <TextView-->
<!--                    android:id="@+id/uprofilename"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="10dp"-->
<!--                    android:fontFamily="sans-serif-condensed-light"-->
<!--                    android:text="@string/sample_name"-->
<!--                    android:textColor="#FFFFFF"-->
<!--                    android:textStyle="bold" />-->

<!--                <TextView-->
<!--                    android:id="@+id/ulastSeen"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="10dp"-->
<!--                    android:layout_marginTop="2dp"-->
<!--                    android:fontFamily="sans-serif-condensed-light"-->
<!--                    android:text="@string/lastmsg"-->
<!--                    android:textColor="#FFFFFF"-->
<!--                    android:textSize="12sp"-->
<!--                    android:visibility="gone" />-->
<!--            </LinearLayout>-->
<!--        </LinearLayout>-->
<!--    </androidx.appcompat.widget.Toolbar>-->


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerChats"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sendbtn"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextChats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/phonenumbertextbox"
                android:ems="10"
                android:hint="@string/type_a_message"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/attachment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:contentDescription="@string/attachment"
                app:srcCompat="@drawable/ic_baseline_attach_file_24" />

            <ImageView
                android:id="@+id/camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:contentDescription="@string/camera"
                app:srcCompat="@drawable/ic_baseline_camera_alt_24" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/sendbtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:background="@drawable/circlesendbutton"
        android:contentDescription="@string/send"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView"
        app:srcCompat="@drawable/ic_baseline_send_24" />

</androidx.constraintlayout.widget.ConstraintLayout>